--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -75,6 +75,12 @@ p, div {
   font-weight: bold;
 }
 
+.smallSectionTitle {
+  font-family: 'Amatica SC', cursive;
+  font-size: 2em;
+  font-weight: bold;
+}
+
 .sectionDivider {
   height: 1em;
   transform: rotate(-3deg);
@@ -87,6 +93,10 @@ p, div {
   transform: rotate(-3deg);
   margin: 0 -10px;
   background-color: #ededed;
+}
+
+.fa:hover {
+  color:  #a48ea4;
 }
 
 .aboutMe {
@@ -155,7 +165,7 @@ p, div {
 }
 
 #carousel {
-  margin-bottom: 25px;
+  margin: 0 8% 15px 8%;
 }
 
 .project {
@@ -169,6 +179,15 @@ p, div {
 
 #projectHeader {
   margin-bottom: 20px;
+}
+
+.thumbnail img {
+  width: 70%;
+}
+
+.footer {
+  background-color: rgba(78, 78, 78, .8);
+  color: #ededed;
 }
 
 /*End My Styling*/
@@ -1267,13 +1286,13 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #4e4e4e;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
-  text-decoration: underline;
+  color: #a48ea4;
+  text-decoration: bold;
 }
 a:focus {
   outline: thin dotted;
@@ -3289,27 +3308,27 @@ fieldset[disabled] .btn-default.focus {
   background-color: #333;
 }
 .btn-primary {
-  color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  color: #ededed;
+  background-color:  #4e4e4e;
+  border-color: #4e4e4e;
 }
 .btn-primary:focus,
 .btn-primary.focus {
-  color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
+  color: #ededed;
+  background-color: #a48ea4;
+  border-color: #a48ea4;
 }
 .btn-primary:hover {
-  color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  color: #ededed;
+  background-color: #a48ea4;
+  border-color: #a48ea4;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
+  color: #ededed;
+  background-color: #a48ea4;
+  border-color: #a48ea4;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -4457,6 +4476,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
+  color: #a48ea4 !important;
 }
 .navbar-brand > img {
   display: block;
@@ -6499,18 +6519,19 @@ button.close {
   left: 0;
   width: 15%;
   font-size: 20px;
-  color: #fff;
+  color: #ededed;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
-  background-color: rgba(0, 0, 0, 0);
+  text-shadow: 0 1px 2px rgba(78, 78, 78, .6);
+  background-color: rgba(78, 78, 78, 0);
   filter: alpha(opacity=50);
-  opacity: .5;
+  opacity: 0.5;
+
 }
 .carousel-control.left {
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
-  background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .5)), to(rgba(0, 0, 0, .0001)));
-  background-image:         linear-gradient(to right, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
+  background-image: -webkit-linear-gradient(left, rgba(78, 78, 78, .5) 0%, rgba(078, 78, 78, .0001) 100%);
+  background-image:      -o-linear-gradient(left, rgba(78, 78, 78, .5) 0%, rgba(78, 78, 78, .0001) 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(78, 78, 78, .5)), to(rgba(78, 78, 78, .0001)));
+  background-image:         linear-gradient(to right, rgba(78, 78, 78, .5) 0%, rgba(78, 78, 78, .0001) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
   background-repeat: repeat-x;
 }
@@ -6526,7 +6547,7 @@ button.close {
 }
 .carousel-control:hover,
 .carousel-control:focus {
-  color: #fff;
+  color: #ededed;
   text-decoration: none;
   filter: alpha(opacity=90);
   outline: 0;
