--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4748,10 +4748,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: #777;
+  color: #a48ea4;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: #ededed;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
